[package]
name = "hookdll"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"] # builds a .dll

[dependencies]
detour = "0.8"
# Use a slightly older version to resolve the dependency issue.
imgui = "0.10.0"
imgui-dx11-renderer = "0.10.0"
windows = { version = "0.56.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
