[package]
name = "hookdll"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"] # builds a .dll

[dependencies]
# Update detour to a version compatible with a more recent windows crate
detour = "0.9.0"
imgui = "0.8.0"
imgui-dx11-renderer = "0.8.0"
windows = { version = "0.56.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
